Fixed hidden buttons on image-upload modal when device is too small

--- a/src/public/css/generate.css
+++ b/src/public/css/generate.css
@@ -154,6 +154,10 @@ video, #frame {
   visibility: hidden;
 }
 
+#image-modal-content {
+  overflow-y: scroll !important;
+}
+
 #image-modal-footer {
   background-color: white;
   visibility: hidden;
